# SnakeGame

./: .gitignore  CMakeLists.txt  Makefile
app/: main.cpp
include/Commands/: ChangeStateCommand.h  QuitCommand.h  SetDirectionCommand.h
include/Core/: Command.h  GameManager.h  GameState.h  Kbhit.h  Point.h  Snake.h
include/States/: GameOverState.h  MenuState.h  PlayingState.h
src/Commands/: ChangeStateCommand.cpp  QuitCommand.cpp  SetDirectionCommand.cpp
src/Core/: GameManager.cpp  GameState.cpp  Kbhit.cpp  Snake.cpp
src/States/: GameOverState.cpp  MenuState.cpp  PlayingState.cpp
